Alt image edit of index.html

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 <h1> Stream One </h1>
 <div class="card">
 	<a href="https://en.wikipedia.org/wiki/JavaScript">
-	<img src="Images/JavaScript.jpg"></img>
+	<img src="Images/JavaScript.jpg" alt="JavaScript Logo"></img>
 	<h2> Java Script </h2>
 	</a>
 </div>
 
 <div class = "card">
 	<a href = <a href="https://en.wikipedia.org/wiki/Cloud9">
-		<img src="Images/Cloud9.jpg"></img>
+		<img src="Images/Cloud9.jpg" alt="Coud9 Logo"></img>
 		<h2> Cloud9 </h2>
 	</a>
 </div>
 
 <div class = "card">
 	<a href = <a href="https://en.wikipedia.org/wiki/Git">
-		<img src="Images/Git.jpg"></img>
+		<img src="Images/Git.jpg" alt="Git Logo"></img>
 		<h2> Git </h2>
 	</a>
 </div>
 
 <div class = "card">
 	<a href = <a href="https://en.wikipedia.org/wiki/GitHub">
-		<img src="Images/GitHub.jpg"></img>
+		<img src="Images/GitHub.jpg" alt="GitHub Logo"></img>
 		<h2> GitHub </h2>
 	</a>
 </div>
